--- a/app/admin/css/name.css
+++ b/app/admin/css/name.css
@@ -1,5 +1,6 @@
 .name-list {
-   padding-left: 40px;
+  padding-left: 40px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center; /* Center the boxes horizontally */
   padding-top: 30px;
@@ -8,7 +9,7 @@
 .box {
   width: 300px;
   height: 290px;
-  margin: 0 75px; /* Add some margin on both sides of each box */
+  margin: 0 80px; /* Add some margin on both sides of each box */
 }
 
 .box:last-child {
