--- a/app/user/styles/homepage.css
+++ b/app/user/styles/homepage.css
@@ -5,7 +5,7 @@ body {
   height: 100vh; /* Setting height to viewport height */
   background-repeat: no-repeat;
   background-size: cover; /* Covering the entire viewport */
-  font-family: 'Happy School', sans-serif;
+  font-family: 'More Sugar', sans-serif;
   overflow-x: hidden;
 }
 
