--- a/app/user/styles/login.css
+++ b/app/user/styles/login.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.cdnfonts.com/css/more-sugar");
+
 body {
   max-width: 100%;
   background-color: #13DFFE;
-
+  font-family: 'More Sugar', sans-serif;
 }
 
 
@@ -44,7 +46,7 @@ body {
       cursor: pointer;
       margin-top: 30px;
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset, 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      font-family: 'Happy School', sans-serif;
+      font-family: 'More Sugar', sans-serif;
       font-weight: bold;
       font-size: 20px;
       letter-spacing: 3px;
@@ -82,7 +84,7 @@ input {
   box-sizing: border-box;
   color: #000000;
   border-radius: 50px;
-  font-family: 'Happy School', sans-serif;
+  font-family: 'More Sugar', sans-serif;
   font-weight: bold;
   font-size: 15px;
   letter-spacing: 2px;
