--- a/app/admin/css/dash.css
+++ b/app/admin/css/dash.css
@@ -6,7 +6,7 @@
 /* Other CSS styles */
 
 .dash-bg {
-  background-image: url("/dash.png");
+  background-image: url("/bgad.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -39,4 +39,12 @@
 }
 .bod{
   font-family: 'Harmattan', sans-serif;
+}
+.bod {
+  border-top: 1px solid black; /* Add a 2px solid black border to the top of the tr */
+}
+
+/* Optional: Adjust padding for better spacing */
+.bod td {
+  padding: 10px 6px;
 }
