--- a/app/admin/css/name.css
+++ b/app/admin/css/name.css
@@ -1,17 +1,18 @@
 .name-list {
-  padding-left: 40px;
   margin-bottom: 20px;
-  display: flex;
-  justify-content: center; /* Center the boxes horizontally */
   padding-top: 30px;
+  padding-left: 50px;
+
 }
 
 .box {
-  width: 300px;
-  height: 290px;
-  margin: 0 80px; /* Add some margin on both sides of each box */
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
+  width: 450px;
+  height: 250px;
+  margin-left: 15px;
 }
-
 .box:last-child {
   margin-right: 0; /* Remove margin from the last box */
 }
@@ -19,32 +20,24 @@
 .header {
   color: black;
   padding-top: 6%;
-  padding-left: 29%; /* Adjust the left padding as needed */
+  padding-left: 25%; /* Adjust the left padding as needed */
   padding-right: 0; /* Adjust the right padding as needed */
   text-align: left;
-  width: 98%; /* Set the width to 120% */
+  width: 115%; /* Set the width to 120% */
 }
 
 .header h1 {
   font-size: 24px;
   font-weight: bold;
-  max-width: 100%; /* Set the maximum width to 100% */
   background-color: white;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width: 768px) {
-  /* Apply styles when screen width is 768px or less */
-  .header {
-    padding-left: 2%; /* Adjust the left padding for smaller screens */
-    padding-right: 2%; /* Adjust the right padding for smaller screens */
-  }
-}
 
 .box img {
-  width: 100%; /* Make the image responsive */
-  height: 270px; /* Automatically adjust the height to maintain aspect ratio */
-  border-radius: 8px; /* Add border-radius to the images */
+  max-width: 60%; /* Make the image responsive */
+  max-height: 100%; /* Make the image responsive */
+  border-radius: 10px; /* Add border-radius to the images */
 }
