--- a/app/admin/globals.css
+++ b/app/admin/globals.css
@@ -17,3 +17,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+.dash-bg {
+  background-image: url("/bgad.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh; /* This will make the background cover the entire viewport */
+}
