--- a/app/admin/css/logad.css
+++ b/app/admin/css/logad.css
@@ -11,9 +11,9 @@
   .submit-button {
     box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.2);
   }
-  .custom-image {
+  .custom-image1 {
     position: absolute;
-    top: 22%;
+    top: 9%;
     left: 37%;
     height: auto;
     width: auto;
