--- a/app/user/styles/login.css
+++ b/app/user/styles/login.css
@@ -1,67 +1,62 @@
-@import url("https://fonts.cdnfonts.com/css/more-sugar");
-
 body {
   max-width: 100%;
-  background-color: #13DFFE;
-  font-family: 'More Sugar', sans-serif;
+  background-color: #13dffe;
 }
 
-
-  .centered-image {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-  }
-  
-  .clouds {
-        position: fixed;
-        overflow: hidden;
-        left: -1%;
-
-      }
-  
-      .clouds img {
-        animation: slidein 50s linear infinite; /* Adjust the duration as needed */
-        background-repeat: repeat;
-      }
-  
-      @keyframes slidein {
-        from {
-          transform: translateX(0%);
-        }
-        to {
-          transform: translateX(-100%);
-        }
-      }
-  
-      button {
-        width: 400px;
-        height: 60px;
-      margin: 10px 0;
-      background-color: #12BBD8;
-      color: #fff;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      margin-top: 30px;
-      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset, 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      font-family: 'More Sugar', sans-serif;
-      font-weight: bold;
-      font-size: 20px;
-      letter-spacing: 3px;
-  }
-  
-  .button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    margin-top: 150px;
-    left: 37%;
-    top: 5%;
+.centered-image {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
+.clouds {
+  position: fixed;
+  overflow: hidden;
+  left: -1%;
+}
+
+.clouds img {
+  animation: slidein 50s linear infinite; /* Adjust the duration as needed */
+  background-repeat: repeat;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+button {
+  width: 400px;
+  height: 60px;
+  margin: 10px 0;
+  background-color: #12bbd8;
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  margin-top: 30px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset,
+    0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  font-family: "Happy School", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 3px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  margin-top: 150px;
+  left: 37%;
+  top: 5%;
+}
 
 .login-container {
   display: flex;
@@ -70,10 +65,11 @@ body {
   position: absolute;
   top: 35%; /* set top to 50% */
   left: 50%; /* set left to 50% */
-  transform: translate(-50%, -50%); /* use translate to center both horizontally and vertically */
+  transform: translate(
+    -50%,
+    -50%
+  ); /* use translate to center both horizontally and vertically */
 }
-
-
 
 input {
   width: 400px;
@@ -84,7 +80,7 @@ input {
   box-sizing: border-box;
   color: #000000;
   border-radius: 50px;
-  font-family: 'More Sugar', sans-serif;
+  font-family: "Happy School", sans-serif;
   font-weight: bold;
   font-size: 15px;
   letter-spacing: 2px;
@@ -102,9 +98,11 @@ input {
   position: absolute;
   top: 50%; /* set top to 50% */
   left: 50%; /* set left to 50% */
-  transform: translate(-50%, -50%); /* use translate to center both horizontally and vertically */
+  transform: translate(
+    -50%,
+    -50%
+  ); /* use translate to center both horizontally and vertically */
 }
-
 
 .reg-container {
   width: 1250px;
@@ -114,24 +112,21 @@ input {
   border-radius: 25px;
 }
 
-
 .loginbot {
   position: fixed;
-  bottom: -.8%;
+  bottom: -0.8%;
   left: 0;
-  width: 100%;/* Replace with your image URL */
+  width: 100%; /* Replace with your image URL */
   background-size: contain; /* Adjust the size of the background */
   background-repeat: no-repeat;
   background-position: center bottom;
   /* Add other styles for your loginbot */
 }
 
-
-
-.guidepage-bg{
+.guidepage-bg {
   position: fixed;
   height: 100vh;
-  background-image: url('/guidebg.png');
+  background-image: url("/guidebg.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
