--- a/app/admin/css/sidenav.css
+++ b/app/admin/css/sidenav.css
@@ -8,7 +8,7 @@
 .search {
     width: 300px;
     padding: 0.5rem 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid white;
     border-radius: 9999px;
     outline: none;
     font-size: 1rem;
@@ -16,7 +16,7 @@
 }
 
 .search:focus {
-    border-color: #12565a;
+    border-color:black;
 }
 .side-nav {
   
@@ -38,7 +38,7 @@
 }
 
 .home-side{
- 
+
     background-color: #756AAE;
     color: white;
     height: 115px;
