--- a/app/admin/css/testscores.css
+++ b/app/admin/css/testscores.css
@@ -110,3 +110,14 @@
   p, h2{
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
   }
+
+  .dlbutton{
+    font-family: 'lato', sans-serif;
+    background-color: white;
+    border-radius: 50px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5), inset 0px 1px 3px rgba(0, 0, 0, 0.5);
+    padding: 20px 65px; /* Adjusted padding for a slightly bigger button */
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+  }
