New Menu Page for kids

--- a/app/user/css/quiz.css
+++ b/app/user/css/quiz.css
@@ -12,3 +12,19 @@
   .h-20 {
     height: 2rem;
 }
+
+.page-container2 {
+  background-image: url('/menubg.png'); /* Replace with the actual path to your image */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  justify-content: center;
+
+
+}
+.topics-one{
+  display: flex;
+     align-items: center;
+  justify-content: center;
+}
