--- a/app/user/css/quiz.css
+++ b/app/user/css/quiz.css
@@ -24,7 +24,23 @@
 
 }
 .topics-one{
-  display: flex;
+    display: flex;
      align-items: center;
-  justify-content: center;
+    justify-content: center;
+}
+.selected {
+  border: 8px solid #49ff00; /* Change border color as needed */
+  transition: border-color 0.3s ease; /* Adjust transition duration */
+}
+.choice-item:hover {
+  border: 4px solid #FF8484; /* Change border color as needed */
+
+}
+.choice {
+  transition: opacity 0.6s ease-in-out;
+}
+
+.fade-out {
+  opacity: 0;
+   
 }
