--- a/app/user/css/quiz.css
+++ b/app/user/css/quiz.css
@@ -1,7 +1,7 @@
 
 
 .page-container {
-  background-image: url('/quizbg.png'); /* Replace with the actual path to your image */
+  background-image: url('/quizbg3.png'); /* Replace with the actual path to your image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -11,6 +11,7 @@
   align-items: center;
 
 }
+
 .h-20 {
   height: 2rem;
 }
