--- a/app/admin/css/name.css
+++ b/app/admin/css/name.css
@@ -1,10 +1,8 @@
 .name-list {
   margin-bottom: 20px;
-  padding-top: 30px;
+  padding-top: 10px;
   padding-left: 50px;
-
 }
-
 .box {
   display: flex;
   justify-content: center; /* Horizontally center the content */
@@ -18,6 +16,7 @@
 }
 
 .header {
+  font-family: "Inter", sans-serif;
   color: black;
   padding-top: 6%;
   padding-left: 25%; /* Adjust the left padding as needed */
@@ -27,17 +26,60 @@
 }
 
 .header h1 {
-  font-size: 24px;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
   font-weight: bold;
   background-color: white;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
-
 
 .box img {
   max-width: 60%; /* Make the image responsive */
   max-height: 100%; /* Make the image responsive */
   border-radius: 10px; /* Add border-radius to the images */
+}
+
+.DashDisplay {
+  font-family: "Inter", sans-serif;
+  box-shadow: 2px;
+width: 1380px;
+margin-left: 385px;
+}
+.Test,
+.UserCount,
+.Educators-Count,
+.Topics {
+background-color: white;
+}
+.labels {
+  position: absolute;
+  bottom: 20px;
+  font-size:40px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  text-align: center;
+  padding: 10px; /* Add padding for better visibility */
+  color: black; /* Text color */
+}
+
+.labels h1 {
+  margin: 0; /* Remove default margin */
+}
+.Test,
+.UserCount,
+.Educators-Count,
+.Topics  {
+  position: relative;
+  height: 250px;
+  width: 100%;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  background: rgb(2, 0, 36);
+  background-color: white;
+  overflow: hidden; /* Ensures label is not visible outside UserCount */
 }
