--- a/app/user/css/quiz.css
+++ b/app/user/css/quiz.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   min-height: 100vh;
   display: flex;
+  height: auto;
   justify-content: center;
   align-items: center;
   font-family: 'Inter', sans-serif;
