--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
   }
 }
 .dash-bg {
-  background-image: url("/bgad.png");
+  background-image: url("/userbg2.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
